tests/spec/compile-fail/015_vector_of_array_slice.zn
// category: compile-fail
// profile: freestanding
// purpose: ArraySlice cannot be stored in Vector

module tests.fail.vectorOfArraySlice;

import core.alloc.{AllocError, GlobalAllocator};
import core.result.{Result, Ok};

fn bad(mut allocator: GlobalAllocator) -> Result<Unit, AllocError> {
    let slices = try Vector<ArraySlice<U8>>.withCapacity(4, mut allocator); // expected-error: ArraySlice cannot be stored in Vector
    let ignoredSlices = move slices;
    return Ok(());
}
